--- a/app/views/home/_skillsets.html.haml
+++ b/app/views/home/_skillsets.html.haml
@@ -1,4 +1,5 @@
 %div.flex.flex-wrap.gap-x-2
   - @tags.each do |tag|
-    .text-xs.border.bg-white.dark:bg-slate-400.dark:b-slate-400.shadow-sm.text-bold.px-2.mb-1.rounded.align-middle(class="py-0.5")= tag.name
+    %div(class="text-xs border bg-white dark:border-slate-600 dark:bg-slate-800 shadow-sm text-bold px-2 mb-1 rounded align-middle py-0.5")
+      = tag.name
 
