--- a/app/views/home/work_with_me.html.haml
+++ b/app/views/home/work_with_me.html.haml
@@ -13,10 +13,10 @@
   %div.mb-10 &nbsp;
 
 %div(class='flex flex-col mx-auto md:flex-row md:gap-10 tracking-tight max-w-xs md:justify-center md:max-w-full')
-  %div(class='border-2 border-lime-500 py-1 px-7 text-center rounded-lg hover:bg-lime-600 hover:text-grey-800 hover:text-slate-100 bg-lime-100 shadow font-bold md:w-1/3 mb-5')
+  %div(class='border-2 py-1 px-7 text-center rounded-lg bg-slate-200 dark:bg-slate-400 font-bold md:w-1/3 mb-5')
 
     = link_to asset_path('resume.pdf'), download: 'resume.pdf', target: '_blank' do
-      .inline-block.align-middle(class='dark:hidden')
+      .inline-block.align-middle
         <svg fill="currentColor" class="w-6 h-6" viewBox="0 0 20 20"><path d="M10.75 2.75a.75.75 0 0 0-1.5 0v8.614L6.295 8.235a.75.75 0 1 0-1.09 1.03l4.25 4.5a.75.75 0 0 0 1.09 0l4.25-4.5a.75.75 0 0 0-1.09-1.03l-2.955 3.129V2.75z"/><path d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25v-2.5z"/></svg>
       .inline-block.align-middle Resume
 
