--- a/app/views/projects/_project.html.haml
+++ b/app/views/projects/_project.html.haml
@@ -7,17 +7,17 @@
     .project-image
       = image_tag project.image_url, class: 'img-fluid'
 
-  %p.font-normal.text-sm.mb-3.text-gray-700.dark:text-gray-400= project.description
+  %p.font-normal.text-sm.mb-3.text-gray-700.dark:text-gray-200= project.description
 
-  %div.flex.flex-wrap.gap-x-2.mb-2
+  %div.flex.flex-wrap.gap-x-2.mb-4
     - project.skill_counts.order(taggings_count: :desc).each do |skill|
-      %div.text-xs.border.border-slate-200.py-1.px-2.text-slate-500
+      %div.text-xs.border.border-slate-200.py-1.px-2.text-slate-500.dark:text-slate-200.rounded-lg
         = skill
 
   %p
-    = link_to project.source_url, target: '_blank', class: 'text-slate-500 text-sm' do
+    = link_to project.source_url, target: '_blank', class: 'text-sm' do
       .inline-block
-        = render 'shared/link_svg'
+        <svg fill="currentColor" class="w-4 h-4" viewBox="0 0 20 20"><path d="M12.232 4.232a2.5 2.5 0 0 1 3.536 3.536l-1.225 1.224a.75.75 0 0 0 1.061 1.06l1.224-1.224a4 4 0 0 0-5.656-5.656l-3 3a4 4 0 0 0 .225 5.865.75.75 0 0 0 .977-1.138 2.5 2.5 0 0 1-.142-3.667l3-3z"/><path d="M11.603 7.963a.75.75 0 0 0-.977 1.138 2.5 2.5 0 0 1 .142 3.667l-3 3a2.5 2.5 0 0 1-3.536-3.536l1.225-1.224a.75.75 0 0 0-1.061-1.06l-1.224 1.224a4 4 0 1 0 5.656 5.656l3-3a4 4 0 0 0-.225-5.865z"/></svg>
       .inline-block.align-top github.com
 
 
