--- a/app/views/home/solutions.html.haml
+++ b/app/views/home/solutions.html.haml
@@ -7,7 +7,7 @@
 
 
 %div(class='mb-4')
-  %article(class='bg-red-50 py-10 md:py-16 pb-10 px-6 md:px-24 lg:px-24 lg:mx-32')
+  %article(class='bg-red-50 py-10 md:py-16 pb-10 px-6 md:px-24 lg:px-24 lg:mx-32' id="upgrading-rails")
     %h1(class='mb-10 md:mb-14 text-3xl font-bold tracking-tight text-center text-slate-700') Upgrading Ruby on Rails.
 
     %div(class='')
@@ -34,8 +34,8 @@
           = '==>'
 
 
-%div(class='grid md:grid-cols-2 md:gap-4')
-  %article(class='bg-gray-900 dark:bg-gray-700 text-white mb-4 md:mb-0 py-16')
+%div(class='grid md:grid-cols-2 md:gap-4 mb-4')
+  %article(class='bg-gray-900 dark:bg-gray-700 text-white mb-4 md:mb-0 py-16' id="white-labeling")
     %h1(class='mb-8 text-3xl font-bold tracking-tight text-center px-4 md:px-10 text-slate-100') White labeling a SaaS offering.
 
     %p(class='font-bold text-sm max-w-prose text-white antialiased mb-6 px-5 md:px-12')
@@ -48,9 +48,9 @@
       Depending on the number of expected SaaS clients, automated domain registration can be handled by a local NGINX service acting as the domain endpoint, that routes to the intended service, or you can use an external service such as Cloudflare, or with fewer domains, Heroku. All are solutions that can be fully automated and with implementation occuring within minutes. It is important to do this correctly as reversing course in the future can be extrememly difficult and distruptive for clients.
 
     %div(class='flex justify-center mb-10')
-      %div(class='font-bold pl-3 md:pl-4 pr-2 border br-none border-gray-900 dark:border-gray-300 py-2 bg-gray-900 dark:bg-gray-300 text-gray-800')
+      %div(class='font-bold pl-3 md:pl-4 pr-2 border br-none border-gray-900 dark:border-gray-300 py-2 bg-gray-700 text-gray-200 dark:text-gray-800  dark:bg-gray-300 dark:text-gray-800')
         Time to completion
-      %div(class='font-bold border border-white dark:border-gray-500 bg-white dark:bg-gray-500 text-gray-200  pl-4 md:pr-5 pr-5 py-2')
+      %div(class='font-bold border border-white dark:border-gray-500 bg-gray-200 dark:bg-gray-500 text-gray-600 dark:text-gray-100  pl-4 md:pr-5 pr-5 py-2')
         1 month
 
 
@@ -62,7 +62,7 @@
         %br
         mydomain.com
 
-  %article(class='bg-gray-900 dark:bg-gray-700 text-white mb-4 md:mb-0')
+  %article(class='bg-gray-900 dark:bg-gray-700 text-white mb-4 md:mb-0' id="apis")
     %div(class='py-16')
       %h1(class='mb-8 text-3xl font-bold tracking-tight text-center px-4 md:px-10 text-slate-100') Offering a RESTful API.
 
@@ -79,9 +79,9 @@
         an open-source application that I open-sourced for white-labeling API documentation on a custom domain.
 
       %div(class='flex justify-center mb-8')
-        %div(class='font-bold pl-3 md:pl-4 pr-2 border br-none border-gray-900 dark:border-gray-300 py-2 bg-gray-900 dark:bg-gray-300 text-gray-800')
+        %div(class='font-bold pl-3 md:pl-4 pr-2 border br-none border-gray-900 dark:border-gray-300 py-2 bg-gray-700 text-gray-200 dark:text-gray-800 dark:bg-gray-300')
           Time to completion
-        %div(class='font-bold border border-white dark:border-gray-500 bg-white dark:bg-gray-500 text-gray-200  pl-4 md:pr-5 pr-5 py-2')
+        %div(class='font-bold border border-white dark:border-gray-500 bg-gray-200 dark:bg-gray-500 text-gray-600 dark:text-gray-100  pl-4 md:pr-5 pr-5 py-2')
           1-3 weeks
 
 
@@ -92,7 +92,7 @@
 
         <svg fill="none" stroke="currentColor" stroke-width="1.5" class="w-20 h-20" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="m21 7.5-9-5.25L3 7.5m18 0-9 5.25m9-5.25v9l-9 5.25M3 7.5l9 5.25M3 7.5v9l9 5.25m0-9v9"/></svg>
 
-  %article(class='bg-gray-100 mb-4 md:mb-0')
+  %article(class='bg-gray-100 mb-4 md:mb-0' id="billing")
     %div(class='py-16')
       %h1(class='mb-8 text-3xl font-bold tracking-tight text-center px-4 md:px-10 text-slate-700') Recurring charges and billing.
 
@@ -115,7 +115,7 @@
         <svg fill="none" stroke="currentColor" stroke-width="1.5" class="w-24 h-24" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 8.25h19.5M2.25 9h19.5m-16.5 5.25h6m-6 2.25h3m-3.75 3h15a2.25 2.25 0 0 0 2.25-2.25V6.75A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25v10.5A2.25 2.25 0 0 0 4.5 19.5z"/></svg>
 
 
-  %article(class='bg-blue-50 mb-4 md:mb-0')
+  %article(class='bg-blue-50 mb-4 md:mb-0' id="monolith")
     %div(class='py-16')
       %h1(class='mb-8 text-3xl font-bold tracking-tight text-center px-4 md:px-10 text-slate-700') Monolith to microservice.
 
@@ -153,7 +153,7 @@
           %div(class='-mt-4')
             <svg fill="none" stroke="currentColor" stroke-width="1.5" class="w-12 h-12" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="m21 7.5-9-5.25L3 7.5m18 0-9 5.25m9-5.25v9l-9 5.25M3 7.5l9 5.25M3 7.5v9l9 5.25m0-9v9"/></svg>
 
-  %article(class='bg-purple-50 mb-4 md:mb-0')
+  %article(class='bg-purple-50 mb-4 md:mb-0' id='devops')
     %div(class='py-16')
       %h1(class='mb-8 text-3xl font-bold tracking-tight text-center px-4 md:px-10 text-slate-700') Leveraging Heroku with devops.
 
@@ -175,7 +175,7 @@
       %div(class='flex justify-center')
         = image_tag "heroku.png", width: '200'
 
-  %article(class='bg-gray-100 mb-4 md:mb-0')
+  %article(class='bg-gray-100 mb-4 md:mb-0' id="scraping")
     %div(class='py-16')
       %h1(class='mb-8 text-3xl font-bold tracking-tight text-center px-4 md:px-10 text-slate-700') Scraping for data.
 
@@ -200,3 +200,32 @@
           &#8594
         <svg viewBox="0 0 20 20" class="w-16 h-16"><path d="M4 18h12V6h-4V2H4v16zm-2 1V0h12l4 4v16H2v-1z"/></svg>
 
+
+%div(class='mb-4')
+  %article(class='bg-gray-50 py-10 md:py-16 pb-10 px-6 md:px-24 lg:px-24 lg:mx-32' id="multitenancy")
+    %h1(class='mb-10 md:mb-14 text-3xl font-bold tracking-tight text-center text-slate-700') From single to multi-tenancy.
+
+    %div(class='')
+      %div
+        %p(class='font-bold text-sm text-slate-800 antialiased mb-6')
+          Transitioning from single to multi-tenancy poses challenges. Initially, a single-tenant SaaS application was deployed for various clients in individual instances. However, this approach led to escalating support costs due to misalignment in code and database structures across instances. As the number of clients grew, managing this fragmented system became increasingly difficult and costly.
+        %p(class='font-light text-sm text-slate-800 antialiased mb-6')
+          Opting for multi-tenancy is the intelligent choice when designing a SaaS application, as handling numerous single-tenant installations entails significantly greater overhead, given the management of multiple data and code bases.
+        %p(class='font-bold text-sm text-slate-800 antialiased mb-7')
+          In this chalenging project, the approach taken was to first refactor the codebase for multitenancy and launch a new master application. Each client instance then had its database migrated and data massaged, and then within a tight timeframe, merging it into the master database, and resetting its DNS to seemlessly direct to the new application.
+
+    %div(class='flex justify-center mb-6')
+      %div(class='font-bold pl-3 md:pl-4 pr-2 border py-2 bg-gray-200 dark:bg-gray-400')
+        Time to completion
+      %div(class='font-bold border bg-white dark:bg-gray-200 text-gray-700 pl-4 md:pr-5 pr-5 py-2')
+        1-6 months
+    / %div(class='flex justify-center')
+    /   = image_tag "ror-logo.svg", width: '150'
+
+    %div(class='flex justify-center text-gray-900')
+      <svg fill="none" stroke="currentColor" stroke-width="1.5" class="w-20 h-20" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955a1.126 1.126 0 0 1 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"/></svg>
+      %div(class='mt-1 px-2 text-2xl font-bold leading-6')
+        %div &#8594
+        %div &#8594
+        %div &#8594
+      <svg fill="none" stroke="currentColor" stroke-width="1.5" class="w-20 h-20" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M3.75 21h16.5M4.5 3h15M5.25 3v18m13.5-18v18M9 6.75h1.5m-1.5 3h1.5m-1.5 3h1.5m3-6H15m-1.5 3H15m-1.5 3H15M9 21v-3.375c0-.621.504-1.125 1.125-1.125h3.75c.621 0 1.125.504 1.125 1.125V21"/></svg>
