--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -17,7 +17,9 @@
       = link_to "slime online", "https://github.com/carsoncole/slime-kangaroo"
       (trying to foster her entreprenurial spirit), to engineering multiple corporate apps.
     %p.text-lg.text-slate-700.dark:text-slate-50.max-w-prose
-      As a seasoned Ruby on Rails full-stack developer, I possess expertise in application design, development, and deployment. Proficient in evaluating both existing and new applications, I thrive in facilitating discussions among stakeholders and playing a pivotal role as a lead engineering contributor in various leadership capacities.
+      As a seasoned Ruby on Rails full-stack developer, I possess expertise in application design, development, and deployment.
+      = link_to "See common application challenges and solutions", solutions_path
+      that I've worked on. Proficient in evaluating both existing and new applications, I thrive in facilitating discussions among stakeholders and playing a pivotal role as a lead engineering contributor in various leadership capacities.
 
   %div.flex.justify-center.lg:justify-end
     = image_tag "profile_photo.jpeg", alt: 'Carson Cole image', class: 'rounded-lg md:my-10 md:ml-0 lg:ml-4 rotate-0 lg:rotate-6 h-60 w-60 lg:h-72 lg:w-72 xl:h-80 xl:w-80 shadow-xl dark:shadow-gray-800'
