--- a/app/views/home/sitemap.xml.erb
+++ b/app/views/home/sitemap.xml.erb
@@ -18,7 +18,7 @@
   </url>
   <url>
     <loc>https://carsoncole.com/solutions</loc>
-    <lastmod><%= File.mtime("app/views/home/sitemap.xml.erb").strftime("%Y-%m-%d") %></lastmod>
+    <lastmod><%= File.mtime("app/views/home/solutions.html.haml").strftime("%Y-%m-%d") %></lastmod>
   </url>
   <url>
     <loc>https://carsoncole.com/work-with-me</loc>
